[package]
name = "rust"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Lewis Chan <me@bupt.cn>"]
description = "cshi's learning code snippet for rust"

[profile.release]
opt-level = 2

[dependencies]
hello_macro = { path = "./hello_macro" }
hello_macro_derive = { path = "./hello_macro_derive" }