[package]
name = "get-rusty"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Lewis Chan <me@bupt.cn>"]
description = "cshi's learning code snippet for rust"

[lib]
# error: `proc-macro` crate types currently cannot export any items other than functions tagged with `#[proc_macro]`, `#[proc_macro_derive]`, or `#[proc_macro_attribute]`
#proc-macro = true

# 调试版配置
[profile.dev]
opt-level = 0        # 优化级别：0(无优化) 到 3(最高优化)
debug = true         # 包含调试信息
debug-assertions = true  # 启用调试断言
overflow-checks = true   # 启用整数溢出检查
lto = false         # 链接时优化
panic = 'unwind'    # panic 处理方式

# 发布版配置
[profile.release]
opt-level = 3       # 最高优化
debug = false       # 不包含调试信息
debug-assertions = false
overflow-checks = false
lto = true         # 启用链接时优化
panic = 'abort'    # panic 时直接终止
codegen-units = 1  # 代码生成单元数

# https://doc.rust-lang.org/cargo/reference/workspaces.html#the-dependencies-table
[dependencies]
# If you’re publishing your versions of hello_macro and hello_macro_derive to crates.io,
# they would be regular dependencies; if not, you can specify them as path dependencies as follows:

# https://doc.rust-lang.org/cargo/reference/specifying-dependencies.html#specifying-path-dependencies
hello_macro = { path = "./hello_macro" }
hello_macro_derive = { path = "./hello_macro_derive" }
ch20_web = { path = "./ch20_web" }
arrayvec = "0.7.6"
uuid = "1.18.1"
dashmap = "6.1.0"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls", "macros", "chrono", "bigdecimal"] }
bigdecimal = { version = "0.4.9", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.0", features = ["full"] }
log = "0.4"
trpl = "0.3.0"
env_logger = "0.11"

actix-web = "4.12.1"
